[package]
name = "haygeobr"
version = "0.1.0"
edition = "2021"
description = "Official Brazilian spatial data plugin for Hayashi — powered by geobr/IPEA"
license = "MIT"
repository = "https://github.com/sheep-farm/haygeobr"
keywords = ["hayashi", "geobr", "gis", "brazil", "plugin"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hayashi-plugin-sdk = { git = "https://github.com/sheep-farm/hayashi-plugin-sdk.git", branch = "main" }
serde_json = "1"
ureq = "2"
parquet = { version = "59", default-features = false, features = ["arrow", "snap"] }
arrow = { version = "59", default-features = false, features = ["csv", "json", "ffi"] }
